chore: update test scripts to use enzyme-free configuration across multiple packages

--- a/packages/pluggableWidgets/file-uploader-web/package.json
+++ b/packages/pluggableWidgets/file-uploader-web/package.json
@@ -37,7 +37,7 @@
         "release": "pluggable-widgets-tools release:web",
         "remove-nf-defaults": "node nf-defaults.mjs remove",
         "start": "pluggable-widgets-tools start:server",
-        "test": "pluggable-widgets-tools test:unit:web",
+        "test": "pluggable-widgets-tools test:unit:web:enzyme-free",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
