--- a/.github/workflows/BuildJobs.yml
+++ b/.github/workflows/BuildJobs.yml
@@ -160,7 +160,8 @@ jobs:
             MXBUILD_TAG: ${{needs.mxversion.outputs.mxbuild_tag}}
             MXRUNTIME_PATH: ${{needs.mxversion.outputs.mxruntime_path}}
             MXRUNTIME_TAG: ${{needs.mxversion.outputs.mxruntime_tag}}
-            
+            GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
         strategy:
             # when one test fails, DO NOT cancel the other
             fail-fast: false
@@ -213,6 +214,7 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GH_PAT }}
               run: >-
+                  echo "GITHUB_TOKEN starts with: ${GITHUB_TOKEN:0:4}... (length: ${#GITHUB_TOKEN})"
                   node ./automation/run-e2e/bin/run-e2e-in-chunks.mjs --chunks ${{ matrix.chunks }} --index ${{ matrix.index }} --event-name ${{ github.event_name }}
             - name: Check file existence
               id: check_files
