--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turborepo.org/schema.json",
+  "globalPassThroughEnv": ["GITHUB_TOKEN"],
   "globalDependencies": [
     "automation/**",
     ".npmrc",
