--- a/packages/pluggableWidgets/skiplink-web/tsconfig.json
+++ b/packages/pluggableWidgets/skiplink-web/tsconfig.json
@@ -18,8 +18,14 @@
         "skipLibCheck": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "jsx": "react-jsx",
-        "outDir": "dist",
-        "rootDir": "src"
+        "jsx": "react",
+        "jsxFactory": "createElement",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        "useUnknownInCatchVariables": false,
+        "exactOptionalPropertyTypes": false,
+        "paths": {
+            "react-hot-loader/root": ["./hot-typescript.ts"]
+        }
     }
 }
