fix: add missing dependency

--- a/packages/shared/widget-plugin-sorting/package.json
+++ b/packages/shared/widget-plugin-sorting/package.json
@@ -31,6 +31,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@mendix/filter-commons": "workspace:^",
         "@mendix/widget-plugin-component-kit": "workspace:*",
         "@mendix/widget-plugin-mobx-kit": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
