--- a/packages/pluggableWidgets/skiplink-web/package.json
+++ b/packages/pluggableWidgets/skiplink-web/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@mendix/pluggable-widget-skiplink-web",
+    "name": "@mendix/skiplink-web",
     "widgetName": "SkipLink",
     "version": "1.0.0",
     "description": "Adds a skip link to the top of the page for accessibility.",
@@ -30,13 +30,18 @@
         "e2e": "run-e2e ci",
         "e2edev": "run-e2e dev --with-preps",
         "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
-        "lint": "eslint src package.json",
+        "lint": "eslint src/ package.json",
         "publish-marketplace": "rui-publish-marketplace",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
         "test": "jest --projects jest.config.js",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
+    },
+    "dependencies": {
+        "@floating-ui/react": "^0.26.27",
+        "@mendix/widget-plugin-component-kit": "workspace:*",
+        "classnames": "^2.5.1"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
