--- a/packages/modules/calendar/package.json
+++ b/packages/modules/calendar/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/calendar",
     "moduleName": "Calendar module",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
@@ -20,7 +20,8 @@
     "moduleFolderNameInModeler": "calendar",
     "marketplace": {
         "minimumMXVersion": "10.22.0.68245",
-        "appName": "Calendar"
+        "appName": "Calendar",
+        "appNumber": 107954
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
