--- a/turbo.json
+++ b/turbo.json
@@ -1,119 +1,85 @@
 {
-  "$schema": "https://turborepo.org/schema.json",
-  "globalPassThroughEnv": ["GITHUB_TOKEN", "GH_PAT", "GH_USERNAME", "GH_EMAIL", "GH_NAME", "CPAPI_PASS", "CPAPI_URL", "CPAPI_USER", "CPAPI_USER_OPENID", "MX_PROJECT_PATH"],
-  "globalDependencies": [
-    "automation/**",
-    ".npmrc",
-    ".nvmrc",
-    ".github/**",
-    "package.json"
-  ],
-  "tasks": {
-    "update-changelog": {
-      "cache": false
-    },
-    "verify": {
-      "inputs": [
-        "package.json",
-        "**/package.xml"
-      ]
-    },
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**",
-        "!dist/tmp/**"
-      ]
-    },
-    "release": {
-      "dependsOn": [
-        "build",
-        "^build",
-        "verify"
-      ],
-      "outputs": [
-        "dist/**",
-        "!dist/tmp/**"
-      ]
-    },
-    "build:module": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": []
-    },
-    "release:module": {
-      "cache": false,
-      "dependsOn": [
-        "^release",
-        "verify"
-      ]
-    },
-    "push-update": {
-      "cache": false,
-      "dependsOn": [
-        "release:module"
-      ]
-    },
-    "test": {
-      "outputs": [],
-      "inputs": [
-        "src/**",
-        "typings/**",
-        "package.json",
-        "tsconfig.json"
-      ],
-      "dependsOn": [
-        "^build"
-      ]
-    },
-    "lint": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": []
-    },
-    "create-gh-release": {
-      "cache": false,
-      "dependsOn": [
-        "release",
-        "release:module",
-        "push-update",
-        "verify"
-      ]
-    },
-    "create-translation": {
-      "cache": false,
-      "outputs": [],
-      "inputs": [
-        "src/**/*.xml",
-        "!src/**/package.xml"
-      ]
-    },
-    "publish-marketplace": {
-      "cache": false
-    },
-    "e2e": {
-      "inputs": [
-        "assets/**",
-        "src/**",
-        "cypress/**",
-        "cypress-visual-screenshots/**",
-        "cypress.config.*",
-        "package.json",
-        "!src/*.{editorConfig,editorPreview,icon,tile,xml}*",
-        "!*/**/__tests__/**"
-      ],
-      "outputs": []
-    },
-    "agent-rules": {
-      "cache": false,
-      "inputs": [
-        "docs/requirements/**"
-      ],
-      "outputs": []
+    "$schema": "https://turborepo.org/schema.json",
+    "globalPassThroughEnv": [
+        "GITHUB_TOKEN",
+        "GH_PAT",
+        "GH_USERNAME",
+        "GH_EMAIL",
+        "GH_NAME",
+        "CPAPI_PASS",
+        "CPAPI_URL",
+        "CPAPI_USER",
+        "CPAPI_USER_OPENID",
+        "MX_PROJECT_PATH",
+        "TAG",
+        "PACKAGE"
+    ],
+    "globalDependencies": ["automation/**", ".npmrc", ".nvmrc", ".github/**", "package.json"],
+    "tasks": {
+        "update-changelog": {
+            "cache": false
+        },
+        "verify": {
+            "inputs": ["package.json", "**/package.xml"]
+        },
+        "build": {
+            "dependsOn": ["^build"],
+            "outputs": ["dist/**", "!dist/tmp/**"]
+        },
+        "release": {
+            "dependsOn": ["build", "^build", "verify"],
+            "outputs": ["dist/**", "!dist/tmp/**"]
+        },
+        "build:module": {
+            "dependsOn": ["^build"],
+            "outputs": []
+        },
+        "release:module": {
+            "cache": false,
+            "dependsOn": ["^release", "verify"]
+        },
+        "push-update": {
+            "cache": false,
+            "dependsOn": ["release:module"]
+        },
+        "test": {
+            "outputs": [],
+            "inputs": ["src/**", "typings/**", "package.json", "tsconfig.json"],
+            "dependsOn": ["^build"]
+        },
+        "lint": {
+            "dependsOn": ["^build"],
+            "outputs": []
+        },
+        "create-gh-release": {
+            "cache": false,
+            "dependsOn": ["release", "release:module", "push-update", "verify"]
+        },
+        "create-translation": {
+            "cache": false,
+            "outputs": [],
+            "inputs": ["src/**/*.xml", "!src/**/package.xml"]
+        },
+        "publish-marketplace": {
+            "cache": false
+        },
+        "e2e": {
+            "inputs": [
+                "assets/**",
+                "src/**",
+                "cypress/**",
+                "cypress-visual-screenshots/**",
+                "cypress.config.*",
+                "package.json",
+                "!src/*.{editorConfig,editorPreview,icon,tile,xml}*",
+                "!*/**/__tests__/**"
+            ],
+            "outputs": []
+        },
+        "agent-rules": {
+            "cache": false,
+            "inputs": ["docs/requirements/**"],
+            "outputs": []
+        }
     }
-  }
 }
