--- a/.github/workflows/PublishMarketplace.yml
+++ b/.github/workflows/PublishMarketplace.yml
@@ -54,3 +54,4 @@ jobs:
                   CPAPI_USER: ${{ secrets.CPAPI_USER }}
                   CPAPI_USER_OPENID: ${{ secrets.SRV_WIDGETS_OPENID }}
                   CPAPI_PASS: ${{ secrets.CPAPI_PASS }}
+                  GH_PAT: ${{ secrets.GITHUB_TOKEN }}
