--- a/package.json
+++ b/package.json
@@ -55,14 +55,13 @@
             "json5@0.x": ">=1.0.2",
             "@codemirror/view": "^6.34.2",
             "enzyme>cheerio": "1.0.0-rc.10",
-            "ts-node": "10.9.2"
+            "ts-node": "10.9.2",
+            "mendix": "^10.16"
         },
         "patchedDependencies": {
-            "react-big-calendar@0.19.2": "patches/react-big-calendar@0.19.2.patch",
             "mobx@6.12.3": "patches/mobx@6.12.3.patch",
             "mobx-react-lite@4.0.7": "patches/mobx-react-lite@4.0.7.patch",
-            "mime-types": "patches/mime-types.patch",
-            "rc-trigger": "patches/rc-trigger.patch"
+            "mime-types": "patches/mime-types.patch"
         },
         "onlyBuiltDependencies": [
             "canvas"
