test: update RangeSlider tests to use Testing Library and improve structure

--- a/packages/pluggableWidgets/range-slider-web/package.json
+++ b/packages/pluggableWidgets/range-slider-web/package.json
@@ -38,7 +38,7 @@
         "publish-marketplace": "rui-publish-marketplace",
         "release": "cross-env MPKOUTPUT=RangeSlider.mpk pluggable-widgets-tools release:web",
         "start": "cross-env MPKOUTPUT=RangeSlider.mpk pluggable-widgets-tools start:server",
-        "test": "pluggable-widgets-tools test:unit:web",
+        "test": "pluggable-widgets-tools test:unit:web:enzyme-free",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
