fix: resolve mapbox tiles loading and auto-zoom timing issues
- Upgrade leaflet from ^1.9.4 to 2.0.0-alpha to fix issues with map tiles not loading
- Add getDimensions utility to handle widget dimensions locally
- Fix auto-zoom timing in LeafletMap component with proper delay mechanism
- Add maxZoom limit (15) to prevent over-zooming when markers are close together
- Use pixel-based padding for consistent spacing around markers
- Update imports to use local getDimensions utility instead of external dependency
- Ensure consistent auto-zoom behavior for Mapbox, OpenStreet, and Here Maps providers

Fixes auto-zoom firing too early before markers are properly rendered.

--- a/packages/pluggableWidgets/maps-web/package.json
+++ b/packages/pluggableWidgets/maps-web/package.json
@@ -46,7 +46,7 @@
         "@vis.gl/react-google-maps": "^0.8.3",
         "classnames": "^2.5.1",
         "deep-equal": "^2.2.3",
-        "leaflet": "^1.9.4",
+        "leaflet": "2.0.0-alpha",
         "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
