--- a/packages/pluggableWidgets/carousel-web/package.json
+++ b/packages/pluggableWidgets/carousel-web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/carousel-web",
     "widgetName": "Carousel",
-    "version": "2.2.1",
+    "version": "2.3.0",
     "description": "Displays images in a carousel",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
@@ -44,7 +44,7 @@
     "dependencies": {
         "@mendix/widget-plugin-component-kit": "workspace:*",
         "classnames": "^2.5.1",
-        "swiper": "^9.4.1"
+        "swiper": "^11.2.10"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
@@ -53,10 +53,6 @@
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/run-e2e": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
-        "cross-env": "^7.0.3",
-        "mime-types": "^2.1.35",
-        "postcss": "^8.5.6",
-        "postcss-url": "^10.1.3",
-        "shelljs": "^0.8.5"
+        "cross-env": "^7.0.3"
     }
 }
