--- a/packages/pluggableWidgets/document-viewer-web/package.json
+++ b/packages/pluggableWidgets/document-viewer-web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/document-viewer-web",
     "widgetName": "DocumentViewer",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "View PDF and other document types",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
@@ -38,8 +38,8 @@
         "@mendix/widget-plugin-component-kit": "workspace:*",
         "@mendix/widget-plugin-platform": "workspace:*",
         "classnames": "^2.5.1",
-        "docx-preview": "^0.3.5",
-        "pdfjs-dist": "^5.0.375",
+        "docx-preview": "^0.3.6",
+        "pdfjs-dist": "4.8.69",
         "react-pdf": "^9.2.1",
         "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
     },
