--- a/automation/utils/package.json
+++ b/automation/utils/package.json
@@ -7,6 +7,7 @@
     "bin": {
         "rui-create-gh-release": "bin/rui-create-gh-release.ts",
         "rui-create-translation": "bin/rui-create-translation.ts",
+        "rui-prepare-release": "bin/rui-prepare-release.ts",
         "rui-publish-marketplace": "bin/rui-publish-marketplace.ts",
         "rui-update-changelog-module": "bin/rui-update-changelog-module.ts",
         "rui-update-changelog-widget": "bin/rui-update-changelog-widget.ts",
@@ -27,6 +28,7 @@
         "format": "prettier --write .",
         "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
         "prepare": "pnpm run compile:parser:widget && pnpm run compile:parser:module && tsc",
+        "prepare-release": "ts-node bin/rui-prepare-release.ts",
         "start": "tsc --watch",
         "version": "ts-node bin/rui-bump-version.ts"
     },
