chore: update eslint

--- a/packages/pluggableWidgets/datagrid-text-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-text-filter-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/datagrid-text-filter-web",
     "widgetName": "DatagridTextFilter",
     "version": "3.3.0",
-    "description": "",
+    "description": "Filter Data Grid 2 rows by text input, supporting contains, starts with, and equals operations.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
