--- a/packages/modules/data-widgets/package.json
+++ b/packages/modules/data-widgets/package.json
@@ -2,6 +2,7 @@
     "name": "@mendix/data-widgets",
     "moduleName": "Data Widgets",
     "version": "3.3.0",
+    "description": "Data Widgets module containing a set of widgets to display data in various ways.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
