--- a/packages/pluggableWidgets/custom-chart-web/package.json
+++ b/packages/pluggableWidgets/custom-chart-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/custom-chart-web",
     "widgetName": "CustomChart",
     "version": "1.2.1",
-    "description": "",
+    "description": "Create customizable charts with Plotly.js for advanced visualization needs",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "repository": {
