--- a/packages/pluggableWidgets/datagrid-dropdown-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-dropdown-filter-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/datagrid-dropdown-filter-web",
     "widgetName": "DatagridDropdownFilter",
     "version": "3.3.0",
-    "description": "",
+    "description": "Filter Data Grid 2 rows by selecting values from a drop-down list.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
