--- a/packages/pluggableWidgets/datagrid-number-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-number-filter-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/datagrid-number-filter-web",
     "widgetName": "DatagridNumberFilter",
     "version": "3.3.0",
-    "description": "",
+    "description": "Filter Data Grid 2 rows by numeric values, supporting equals, greater than, and less than operations.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
