--- a/packages/pluggableWidgets/datagrid-web/package.json
+++ b/packages/pluggableWidgets/datagrid-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/datagrid-web",
     "widgetName": "Datagrid",
     "version": "3.3.0",
-    "description": "",
+    "description": "A powerful, flexible grid for displaying, sorting, and editing data collections in Mendix web apps.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
