--- a/packages/pluggableWidgets/file-uploader-web/package.json
+++ b/packages/pluggableWidgets/file-uploader-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/file-uploader-web",
     "widgetName": "FileUploader",
     "version": "2.3.0",
-    "description": "",
+    "description": "Upload files via drag-and-drop or file dialog. Supports multiple file uploads and image preview thumbnails.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
