--- a/packages/pluggableWidgets/popup-menu-web/package.json
+++ b/packages/pluggableWidgets/popup-menu-web/package.json
@@ -2,6 +2,7 @@
     "name": "@mendix/popup-menu-web",
     "widgetName": "PopupMenu",
     "version": "4.0.2",
+    "description": "Popup Menu widget for displaying a list of actions in a popup.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "repository": {
