--- a/packages/pluggableWidgets/selection-helper-web/package.json
+++ b/packages/pluggableWidgets/selection-helper-web/package.json
@@ -2,7 +2,7 @@
     "name": "@mendix/selection-helper-web",
     "widgetName": "SelectionHelper",
     "version": "3.3.0",
-    "description": "",
+    "description": "Makes it easier for users to select multiple items in Gallery widget.",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
