--- a/automation/utils/package.json
+++ b/automation/utils/package.json
@@ -45,6 +45,7 @@
         "enquirer": "^2.4.1",
         "execa": "^5.1.1",
         "fast-xml-parser": "^4.1.3",
+        "glob": "^11.0.3",
         "node-fetch": "^2.7.0",
         "ora": "^5.4.1",
         "peggy": "^1.2.0",
