fix(custom-chart-web): add codemirror/state

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
             "json5@1.x": ">=1.0.2",
             "json5@0.x": ">=1.0.2",
             "@codemirror/view": "^6.38.1",
+            "@codemirror/state": "^6.5.2",
             "enzyme>cheerio": "1.0.0-rc.10",
             "ts-node": "10.9.2",
             "react-big-calendar@1>clsx": "2.1.1",
