--- a/packages/shared/widget-plugin-hooks/tsconfig.json
+++ b/packages/shared/widget-plugin-hooks/tsconfig.json
@@ -3,6 +3,8 @@
     "include": ["./src/**/*"],
     "compilerOptions": {
         "outDir": "./dist",
-        "rootDir": "./src"
+        "rootDir": "./src",
+        "types": ["jest", "node"],
+        "skipLibCheck": true
     }
 }
