chore(widget-plugin-component-kit): clean up imports and update tsconfig for React 19 compatibility

--- a/packages/shared/widget-plugin-component-kit/tsconfig.json
+++ b/packages/shared/widget-plugin-component-kit/tsconfig.json
@@ -5,6 +5,8 @@
         "outDir": "./dist",
         "rootDir": "./src",
         "types": ["jest", "node"],
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "jsx": "react-jsx",
+        "jsxFactory": ""
     }
 }
