chore(widget-plugin-grid): update type definitions and clean up imports for better compatibility

--- a/packages/shared/widget-plugin-grid/tsconfig.json
+++ b/packages/shared/widget-plugin-grid/tsconfig.json
@@ -3,6 +3,8 @@
     "include": ["./src/**/*"],
     "compilerOptions": {
         "outDir": "./dist",
-        "rootDir": "./src"
+        "rootDir": "./src",
+        "jsx": "react-jsx",
+        "jsxFactory": ""
     }
 }
