chore(widget-plugin-dropdown-filter): update import to use React types and improve TypeScript config

--- a/packages/shared/widget-plugin-dropdown-filter/tsconfig.json
+++ b/packages/shared/widget-plugin-dropdown-filter/tsconfig.json
@@ -4,6 +4,8 @@
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "jsx": "react-jsx",
+        "jsxFactory": ""
     }
 }
