chore(custom-chart-web): update imports and TypeScript configuration for improved compatibility

--- a/packages/pluggableWidgets/custom-chart-web/tsconfig.json
+++ b/packages/pluggableWidgets/custom-chart-web/tsconfig.json
@@ -19,8 +19,8 @@
         "skipLibCheck": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "jsx": "react",
-        "jsxFactory": "createElement",
+        "jsx": "react-jsx",
+        "jsxFactory": "",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "useUnknownInCatchVariables": false,
