chore(document-viewer-web): refactor imports for improved consistency and type safety

--- a/packages/pluggableWidgets/document-viewer-web/tsconfig.json
+++ b/packages/pluggableWidgets/document-viewer-web/tsconfig.json
@@ -6,6 +6,8 @@
         "types": ["jest", "node"],
         "useUnknownInCatchVariables": false,
         "exactOptionalPropertyTypes": false,
+        "jsx": "react-jsx",
+        "jsxFactory": "",
         "paths": {
             "react-hot-loader/root": ["./hot-typescript.ts"]
         }
