--- a/packages/shared/widget-plugin-mobx-kit/package.json
+++ b/packages/shared/widget-plugin-mobx-kit/package.json
@@ -40,14 +40,7 @@
         "@mendix/tsconfig-web-widgets": "workspace:*",
         "@swc/core": "^1.7.26",
         "@swc/jest": "^0.2.36",
-        "@testing-library/react-hooks": "^8.0.1",
-        "@types/jsdom": "^21.1.7",
-        "@types/react": "^19.1.0",
-        "@types/react-dom": "^19.1.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "jsdom": "^27.0.0",
-        "react": "19.1.1",
-        "react-dom": "19.1.1"
+        "@testing-library/react-hooks": "^8.0.1"
     },
     "optionalDependencies": {
         "react": "^18.0.0"
