--- a/packages/shared/widget-plugin-platform/package.json
+++ b/packages/shared/widget-plugin-platform/package.json
@@ -36,12 +36,7 @@
         "@mendix/tsconfig-web-widgets": "workspace:*",
         "@swc/core": "^1.7.26",
         "@swc/jest": "^0.2.36",
-        "@types/jest": "^29.5.0",
-        "@types/react": "^19.1.0",
-        "@types/react-dom": "^19.1.0",
         "classnames": "^2.5.1",
-        "jest-environment-jsdom": "^29.7.0",
-        "react": "19.1.1",
-        "react-dom": "19.1.1"
+        "jest-environment-jsdom": "^29.7.0"
     }
 }
