fix(signature-web): update react imports and fix eslint warnings

--- a/packages/customWidgets/signature-web/tsconfig.json
+++ b/packages/customWidgets/signature-web/tsconfig.json
@@ -20,8 +20,7 @@
         "noUnusedParameters": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "jsx": "react",
-        "jsxFactory": "createElement"
+        "jsx": "react-jsx"
     },
     "files": ["./node_modules/mendix-client/index.d.ts"],
     "include": ["./src", "./typings"],
